working split up spec